<resources>
    <string name="app_name">MovieFlix</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="upcoming_movies">UpComing Movies</string>
    <string name="favorite_movies">Favorite Movies</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="description">Description</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="background_image">background image</string>
    <string name="movie_image">movie image</string>
</resources>